Adding Bigram model

--- a/Reinforcement Learning/Classic RL/Classic RL_Single Agent in a Grid World-Copy1.ipynb
+++ b/Reinforcement Learning/Classic RL/Classic RL_Single Agent in a Grid World-Copy1.ipynb
@@ -713,8 +713,8 @@
     "  \n",
     "- State space $\\mathcal{S} = $ all possible grid configurations\n",
     "\n",
-    "- Reward function $R(s,a) = \\begin{cases} \\texttt{reward_prize}, & \\text{if the agent reaches the prize when performing $a$ in $s$} \\\\ \n",
-    "\\texttt{reward_bomb}, & \\text{if the agent reaches a bomb when performing $a$ in $s$}  \\\\ \\texttt{reward_timestep}, & \\text{otherwise} \\end{cases}$\n",
+    "- Reward function $R(s,a) = \\begin{cases} \\text{reward_prize}, & \\text{if the agent reaches the prize when performing a in s} \\\\ \n",
+    "\\text{reward_bomb}, & \\text{if the agent reaches a bomb when performing a in s}  \\\\ \\text{reward_timestep}, & \\text{otherwise} \\end{cases}$\n",
     "\n",
     "- Transition $\\mathcal{T}$ as expected. For instance, the agents move to the left if $a$ = left and there is no barrier nor border to the left of it."
    ]
