--- a/Natural Language Processing/Language Models/Bigram Model with Embeddings.ipynb
+++ b/Natural Language Processing/Language Models/Bigram Model with Embeddings.ipynb
@@ -8,17 +8,7 @@
     "# Building a Bigram Model\n",
     "\n",
     "In this document, we'll build a simple bigram model to create fake Greek Mythology names.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9a10d27e-c94c-43d4-a704-c893f7855165",
-   "metadata": {},
-   "source": [
-    "**Our choices**\n",
-    "\n",
-    "In this notebook, we will use tokens as the smallest possible subwords, i.e. inidividual characters. The bigram model will consist of first tokenizing the corpus, and then using an embedding (i.e. a table with one vector for each unique character) as the logits of the next token prediction."
+    "We will use tokens as the smallest possible subwords, i.e. inidividual characters. The bigram model will consist of first tokenizing the corpus, and then using an embedding (i.e. a table with one vector for each unique character) as the logits of the next token prediction.\n"
    ]
   },
   {
