--- a/Reinforcement Learning/Classic RL/Classic RL_Single Agent in a Grid World-Copy1.ipynb
+++ b/Reinforcement Learning/Classic RL/Classic RL_Single Agent in a Grid World-Copy1.ipynb
@@ -1458,9 +1458,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ass3",
+   "display_name": "study",
    "language": "python",
-   "name": "ass3"
+   "name": "study"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1472,7 +1472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
