adding curve parametrization

--- a/Natural Language Processing/BERT.ipynb
+++ b/Natural Language Processing/BERT.ipynb
@@ -112,7 +112,7 @@
     "When applying the tokenizer to a sentence, we get a dictionary with:\n",
     "- **input_ids**: the token indexes (including [CLS] and [SEP])\n",
     "- **token_type_ids**: the sentence indexes (0 for first, 1 for second)\n",
-    "- **attention_mask**: 1 if the token should be used in the attention calculations"
+    "- **attention_mask**: 1 if the token should be used in the attention calculations. It will only be 0 during padding (i.e. stretching sentences so that a rectangular batch can be formed)"
    ]
   },
   {
