adding state-space viz for 1d, 2part

--- a/optimization/Outer Approximation copy.ipynb
+++ b/optimization/Outer Approximation copy.ipynb
@@ -103,13 +103,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
@@ -142,42 +135,39 @@
     "    for var in var_info['integer']:\n",
     "        var.domain = Reals\n",
     "\n",
-    "    solver.solve(nlp)\n",
+    "    result = solver.solve(nlp)\n",
     "\n",
-    "def build_master(model, var_info):\n",
-    "    master = ConcreteModel()\n",
-    "\n",
-    "    bj_const = model.obj()\n",
-    "    constraints = [const() for const in model.component_objects(Constraint, active=True)]\n",
-    "\n",
-    "    for x_model in var_info['integer']:\n",
-    "        setattr(master, x_model.name, Var(domain=Integers, bounds=x_model.bounds))\n",
-    "        x_master = getattr(master, x_model.name)\n",
-    "        df_dx = differentiate(mnlp.obj.expr, wrt=x_model)\n",
-    "        obj_const += df_dx*(x_master - x_model)\n",
-    "        for i, constr in enumerate(model.component_objects(Constraint, active=True)):\n",
-    "            dg_dx = differentiate(constr, wrt=v)\n",
-    "            constraints += value(constr) + dg_dx*()\n",
-    "\n",
-    "\n",
-    "    for v in var_info['real']:\n",
-    "        setattr(master, v.name, Var(domain=Reals, bounds=v.bounds))\n",
-    "    \n",
-    "    master.mu = Var(domain=Reals)\n",
-    "\n",
-    "    # Objective\n",
-    "    master.obj = Objective(expr= master.mu, sense=minimize)\n",
-    "\n",
-    "    # Constraints\n",
-    "    df_dx = differentiate(mnlp.obj.expr, wrt=mnlp.x)\n",
-    "    df_dy = differentiate(mnlp.obj.expr, wrt=mnlp.y)\n",
-    "    master.con1 = Constraint(expr= mnlp.obj() + df_dx*(master.x - x_sol) + df_dy*(master.y - y_sol)<=master.mu)\n",
-    "    dg_dx = differentiate(g, wrt=mnlp.x)\n",
-    "    dg_dy = differentiate(g, wrt=mnlp.y)\n",
-    "    master.con2 = Constraint(expr= g() + dg_dx*(master.x - x_sol) + dg_dy*(master.y - y_sol) <= 0)\n",
-    "\n",
-    "    result = solver.solve(master)\n",
+    "def build_master(model):\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_info = outer_approx(mnlp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.4142135587933238"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var_info['real'][0]()"
    ]
   },
   {
@@ -214,13 +204,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -248,17 +231,6 @@
     "### 1.3 -  Building Master Problem\n",
     "\n",
     "Using the solution from the NLP (1.2) to build the MILP."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "master = ConcreteModel()\n",
-    "for v in temp.component_objects(Var):\n",
-    "    setattr(master, v.name, Var(domain=v.domain, bounds=v.bounds))"
    ]
   },
   {
