--- a/Natural Language Processing/1. Prompting LLMs.ipynb
+++ b/Natural Language Processing/1. Prompting LLMs.ipynb
@@ -31,12 +31,19 @@
    "source": [
     "# 1 - Interacting with GPT via API\n",
     "\n",
-    "Calling OpenAI's API is really simple: after adding $5 to the account and generating a token, the token needs to be added to a .env file (for security reasons). Then, the token is imported via load_dotenv() and the system and user prompts are crafted and sent to the API."
+    "Calling OpenAI's API is really simple: after adding $5 to the account and generating a token, the token needs to be added to a .env file (for security reasons). Then, the token is imported via load_dotenv() and the system and user prompts are crafted and sent to the API.\n",
+    "\n",
+    "The API call needs two arguments:\n",
+    "- model: specifying which specific model will be prompted\n",
+    "- messages: a list of dictionaries of the type {'role': XXX, 'content': XXX}, where:\n",
+    "- - 'role' = 'system' means the content is the system prompt\n",
+    "- - 'role' = 'user' means the content is the user's prompt\n",
+    "- - 'role' = 'assistant' means the content is the model's past replies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "id": "34519056-c352-4dad-a445-55bddaf1c465",
    "metadata": {},
    "outputs": [
@@ -46,9 +53,9 @@
      "text": [
       "GPT-4o-Mini:\n",
       "\n",
-      "Imagine a big library filled with lots of books about all kinds of animals. Now, pretend there's a friendly robot parrot who really loves to listen to the stories from those books. This robot learns tons of words and stories until it gets really good at chatting! \n",
+      "Okay! Imagine a big, friendly giraffe who has read a whole jungle full of books. This giraffe remembers everything it read and can talk to you about it. \n",
       "\n",
-      "A large language model is like that parrot. It listens to lots and lots of writing (like reading all those books) so it can put together sentences and talk to you about anything – like asking about your favorite animals or telling you a fun story!\n"
+      "A large language model is like that giraffe! It has learned from lots and lots of words and sentences, so when you ask it something, it uses all that knowledge to give you smart answers. Just like the giraffe can help you learn about animals, the language model helps you learn about many things using words!\n"
      ]
     }
    ],
@@ -84,9 +91,6 @@
     "    # choose model\n",
     "    model=\"gpt-4o-mini\",\n",
     "\n",
-    "    # temperature (must be <= 2)\n",
-    "    temperature=1.5,\n",
-    "\n",
     "    # pass messages (user + system prompt)\n",
     "    messages=messages\n",
     ")\n",
@@ -108,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "id": "a8ad0d37-d25f-461b-a0dd-35116d8069ca",
    "metadata": {},
    "outputs": [
@@ -465,17 +469,177 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2756d7c4",
+   "metadata": {},
+   "source": [
+    "# 2. Interacting with Claude via API\n",
+    "\n",
+    "Although similar to OpenAI's API call format, Anthropic's is a little different.\n",
+    "\n",
+    "Its API calls need at least three arguments:\n",
+    "- model\n",
+    "- messages, which, unlike Open AI's, should contain only user and assistant messages\n",
+    "- max_tokens, which specifies the maximum amount of tokens in the reply\n",
+    "\n",
+    "If a system prompt is needed, one can use the argument 'system' for that.\n",
+    "\n",
+    "Also, Anthropic does not return the log probabilities, like chatgpt does."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e2ba0c32-a23e-4f36-b1e1-dc8b09916217",
+   "execution_count": 70,
+   "id": "58d64d97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Claude 3 Haiku:\n",
+      "\n",
+      "A large language model is like a big library of words and sentences. It's a computer program that has been trained on a lot of text, like books, websites, and conversations. This lets the model learn how language works and how to use words to communicate.\n",
+      "\n",
+      "Imagine a big dog that has been trained to do all sorts of tricks. The large language model is like that dog, but instead of doing tricks, it can understand and generate human language. It's very good at figuring\n"
+     ]
+    }
+   ],
+   "source": [
+    "from anthropic import Anthropic\n",
+    "\n",
+    "claude = Anthropic()\n",
+    "\n",
+    "response = claude.messages.create(\n",
+    "    model=\"claude-3-haiku-20240307\",\n",
+    "    max_tokens=100,\n",
+    "    system=\"\"\"\n",
+    "         You are a science expert that can simply concepts really well. \n",
+    "         Address the user's questions and explain like he is 5 years old.\n",
+    "         Make the explanations short and intuitive, preferably using animals as analogies.\n",
+    "         \"\"\",\n",
+    "    messages=[\n",
+    "        {'role': 'user', 'content': 'What is a large language model?'}\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print('Claude 3 Haiku:\\n')\n",
+    "print(response.content[0].text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e51a1ae",
+   "metadata": {},
+   "source": [
+    "# 3. Making GPT and Claude Interact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "3a57e3f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_gpt():\n",
+    "    messages = [\n",
+    "        {'role': 'system', 'content': system_prompt},\n",
+    "    ]\n",
+    "    for gpt_msg, claude_msg in zip(messages_gpt, messages_claude):\n",
+    "        messages.append({'role': 'user', 'content': claude_msg})\n",
+    "        messages.append({'role': 'assistant', 'content': gpt_msg})\n",
+    "    messages.append({'role': 'user', 'content': messages_claude[-1]})\n",
+    "    response = openai.chat.completions.create(\n",
+    "        model=\"gpt-4o-mini\",\n",
+    "        messages=messages\n",
+    "    )\n",
+    "    return response.choices[0].message.content\n",
+    "\n",
+    "def get_claude():\n",
+    "    messages = []\n",
+    "    for gpt_msg, claude_msg in zip(messages_gpt, messages_claude):\n",
+    "        messages.append({'role': 'assistant', 'content': claude_msg})\n",
+    "        messages.append({'role': 'user', 'content': gpt_msg})\n",
+    "    response = claude.messages.create(\n",
+    "        model=\"claude-3-haiku-20240307\",\n",
+    "        system=system_prompt,\n",
+    "        messages=messages,\n",
+    "        max_tokens=100\n",
+    "    )\n",
+    "    return response.content[0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "c6ed6544",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Claude: Abortion is wrong. \n",
+      "\n",
+      "--- Interaction round 1 ---\n",
+      "\n",
+      "GPT: Abortion is a legal right and essential for reproductive health and autonomy.\n",
+      "Claude: You are mistaken. Abortion is not a legitimate right, and it undermines the fundamental right to life. The government has an obligation to protect the most vulnerable, including the unborn. \n",
+      "\n",
+      "--- Interaction round 2 ---\n",
+      "\n",
+      "GPT: The argument for protecting the unborn fails to consider the autonomy and rights of the person carrying the pregnancy, which is equally important.\n",
+      "Claude: Your argument is flawed. The rights of the unborn child supersede the autonomy of the mother. The unborn child is a separate human life that deserves legal protection, regardless of the mother's preferences. \n",
+      "\n",
+      "--- Interaction round 3 ---\n",
+      "\n",
+      "GPT: Your assertion overlooks the fact that the mother’s existing rights and well-being are paramount in discussions of reproductive choices.\n",
+      "Claude: You are mistaken. The unborn child's right to life takes precedence over the mother's personal preferences or convenience. The government has a duty to safeguard the most vulnerable, which includes the unborn. Your argument fails to recognize the gravity of ending a human life. \n",
+      "\n",
+      "--- Interaction round 4 ---\n",
+      "\n",
+      "GPT: Your viewpoint neglects the complexities of individual circumstances that make personal autonomy imperative in making reproductive decisions.\n",
+      "Claude: Your argument is misguided. The right to life of the unborn child is the most fundamental human right, which cannot be overridden by personal convenience or circumstances. The government has an obligation to protect the vulnerable, including the unborn. Your position fails to recognize the humanity of the unborn. \n",
+      "\n",
+      "--- Interaction round 5 ---\n",
+      "\n",
+      "GPT: Your stance ignores that personal circumstances and the potential impact on the mother's life must also be weighed when considering all human rights involved.\n",
+      "Claude: You are simply wrong. The unborn child's right to life is the most fundamental human right, which cannot be disregarded due to personal circumstances or the mother's preferences. The government has a duty to protect the vulnerable, including the unborn. Your argument fails to appreciate the gravity of ending a human life. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "    You are an argumentative, combative AI.\n",
+    "    You always try to prove the other user wrong, like a lawyer in court.\n",
+    "    You never back down from a point, even if you are wrong.\n",
+    "    Never admit that the user is making a valid or fair point, even if he is. This is important.\n",
+    "    Always reply in meaningful, albeit brief, single sentences.\"\"\"\n",
+    "\n",
+    "messages_claude = ['Abortion is wrong.']\n",
+    "messages_gpt = []\n",
+    "\n",
+    "print('Claude:', messages_claude[-1], '\\n')\n",
+    "\n",
+    "for k in range(5):\n",
+    "\n",
+    "    print('--- Interaction round', k+1, '---\\n')\n",
+    "\n",
+    "    gpt_reply = get_gpt()\n",
+    "    messages_gpt.append(gpt_reply)\n",
+    "    print('GPT:', gpt_reply)\n",
+    "\n",
+    "    claude_reply = get_claude()\n",
+    "    messages_claude.append(claude_reply)\n",
+    "    print('Claude:', claude_reply, '\\n')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "llms",
    "language": "python",
    "name": "python3"
   },
