--- a/Natural Language Processing/2. Finetuning BERT.ipynb
+++ b/Natural Language Processing/2. Finetuning BERT.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Here, $t_i^X$ represents the $i^{th}$ token of sentence X, [SEP] represents the special token used to separate the two sentences and [CLS] is another special token used in the beginning of the sequence, and whose goal is to encapsule some general encoding of the entire input (i.e. not only on a token level).\n",
     "\n",
-    "<center><img src=\"data/BERT_architecture.png\" width=300 height=300></center>\n",
+    "<center><img src=\"data/BERT architecture.png\" width=300 height=300></center>\n",
     "\n",
     "\n",
     "## 3. What data was BERT trained on?\n",
