--- a/Natural Language Processing/4. Finetuning BERT.ipynb
+++ b/Natural Language Processing/4. Finetuning BERT.ipynb
@@ -929,9 +929,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "study",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "study"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -943,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
